export const snapshot = {};

snapshot[`build a site with liquid 1`] = `4`;

snapshot[`build a site with liquid 2`] = `
{
  formats: [
    {
      engine: true,
      key: ".tmpl.ts",
      pageLoader: [AsyncFunction: module],
      removeExtension: true,
    },
    {
      engine: true,
      key: ".tmpl.js",
      pageLoader: [AsyncFunction: module],
      removeExtension: true,
    },
    {
      engine: false,
      key: ".tmpl.json",
      pageLoader: [AsyncFunction: json],
      removeExtension: true,
    },
    {
      dataLoader: [AsyncFunction: json],
      engine: false,
      key: ".json",
    },
    {
      engine: true,
      key: ".md",
      pageLoader: [AsyncFunction: text],
      removeExtension: true,
    },
    {
      component: true,
      dataLoader: [AsyncFunction: module],
      engine: true,
      key: ".js",
      pageLoader: [AsyncFunction: module],
    },
    {
      component: true,
      dataLoader: [AsyncFunction: module],
      engine: true,
      key: ".ts",
      pageLoader: [AsyncFunction: module],
    },
    {
      component: true,
      engine: true,
      includesPath: "_includes",
      key: ".njk",
      pageLoader: [AsyncFunction: text],
      removeExtension: true,
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      key: ".yaml",
      pageLoader: [AsyncFunction: yaml],
      removeExtension: true,
    },
    {
      dataLoader: [AsyncFunction: yaml],
      engine: false,
      key: ".yml",
      pageLoader: [AsyncFunction: yaml],
      removeExtension: true,
    },
    {
      component: true,
      engine: true,
      includesPath: "_includes",
      key: ".liquid",
      pageLoader: [AsyncFunction: text],
      removeExtension: true,
    },
  ],
}
`;

snapshot[`build a site with liquid 3`] = `
[
]
`;

snapshot[`build a site with liquid 4`] = `
{
  content: '
["red","green","blue"]
',
  data: {
    colors: [
      "red",
      "green",
      "blue",
    ],
    content: "
{{ colors | json }}
",
    date: 1970-01-01T00:00:00.000Z,
    layout: null,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    url: "/data.json",
  },
  dest: {
    ext: ".json",
    path: "/data",
  },
  src: {
    ext: ".liquid",
    path: "/data.json",
  },
}
`;

snapshot[`build a site with liquid 5`] = `
{
  content: '<!DOCTYPE html>

<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>Hello World</title>
  </head>
  <body>
    <main>
<h1>Hello World</h1>
</main>
  </body>
</html>
',
  data: {
    content: "
<h1>{{ title }}</h1>
",
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "Hello World",
    url: "/",
  },
  dest: {
    ext: ".html",
    path: "/index",
  },
  src: {
    ext: ".liquid",
    path: "/index",
  },
}
`;

snapshot[`build a site with liquid 6`] = `
{
  content: '<!DOCTYPE html>

<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>liquid filter example</title>
  </head>
  <body>
    <main><h1>LIQUID FILTER EXAMPLE</h1></main>
  </body>
</html>
',
  data: {
    content: undefined,
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "liquid filter example",
    url: "/liquid-filter/",
  },
  dest: {
    ext: ".html",
    path: "/liquid-filter/index",
  },
  src: {
    ext: ".tmpl.js",
    path: "/liquid-filter",
  },
}
`;

snapshot[`build a site with liquid 7`] = `
{
  content: '<!DOCTYPE html>

<html lang="en">
  <head>
    <meta charset="utf-8">
    <title>The title</title>
  </head>
  <body>
    <main><p><strong>THE TITLE</strong></p>
<p><strong>THE TITLE</strong></p>
<p><strong>THE TITLE</strong></p>
<p><strong>THE TITLE</strong></p>
<div>hello (async)</div>

<ul>
  <li>This is a partial</li>
  <li>async helper in a partial (async)</li>
</ul>
<ul>
  <li>This is a partial</li>
  <li>async helper in a partial (async)</li>
</ul>
</main>
  </body>
</html>
',
  data: {
    content: '<p>{% upperCase title %}</p>
<p>{% upperCase "The title" %}</p>
<p>{% upperCaseAsync title %}</p>
<p>{% upperCaseAsync "The title" %}</p>
<div>{{ "hello" | returnAsync }}</div>

{% include "partial.liquid" %}
{% include "./_includes/partial.liquid" %}
',
    date: 1970-01-01T00:00:00.000Z,
    paginate: [GeneratorFunction: paginate],
    search: Search {},
    tags: [
    ],
    title: "The title",
    url: "/with-helpers/",
  },
  dest: {
    ext: ".html",
    path: "/with-helpers/index",
  },
  src: {
    ext: ".liquid",
    path: "/with-helpers",
  },
}
`;
